# zepto8

./: .gitattributes  .gitignore  .gitmodules  Makefile.am  README.md  bootstrap  build.config  configure.ac  dickwave.p8  zepto8.sln
carts/: Makefile.am  dickwave.p8  launcher.p8  rgbplasma.p8  rulez.p8  shmup.p8  test-print.p8  tunnel.p8  tut.p8  voxel.p8  zepto.p8  zepton.p8
doc/: PICO-8-language.md  porting.md  ports.md  z8tool.md  zepto8.md
src/: .gitignore  Makefile.am  analyzer.cpp  analyzer.h  bios.cpp  bios.h  bios.p8  cart.cpp  cart.h  code-fixer.cpp  code-fixer.h  compress.cpp  compress.h  config_app.h  dither.cpp  dither.h  dummy.cpp  filter.cpp  filter.h  fix32.h  libquickjs.vcxproj  libretro-zepto8.vcxproj  libretro.cpp  libz8lua.vcxproj  libzepto8.vcxproj  libzepto8.vcxproj.filters  lua53-parse.h  memory.h  minify.cpp  minify.h  player.cpp  player.h  raccoon.cpp  raccoon.h  splore.cpp  splore.h  synth.cpp  synth.h  telnet.h  template.html  (+26 more)
src/bindings/: js.h  lua.h
src/data/: jingle.p8  makefont.p8  zepto8.lua  zepto8.sfd
src/ide/: editor.cpp  editor.h  ide.cpp  ide.h  memory-editor.cpp  memory-editor.h  text-editor.cpp  text-editor.h
src/pico8/: api.cpp  ast.cpp  bios.p8  cart.cpp  cart.h  code.cpp  gfx.cpp  grammar.h  memory.h  parser.cpp  pico8.h  private.cpp  render.cpp  sfx.cpp  vm.cpp  vm.h  wrap.cpp  z8lua.cpp  z8lua.h
src/raccoon/: api.cpp  font.h  memory.h  vm.cpp  vm.h  wrap.cpp
src/vm/: gfx.cpp  maths.cpp  memory.h  private.cpp  render.cpp  sfx.cpp  vm.cpp  vm.h  z8lua.cpp
src/zlib/: deflate.c  deflate.h  gz8.h  trees.c  zutil.h
t/: Makefile.am  math.p8  print.p8  syntax-depicofier.lua  syntax.p8  tables.p8
utils/: Makefile.am
zepto8/: .gitignore  Makefile.am  cart.cpp  cart.h  code-fixer.cpp  code-fixer.h  lua53-parse.h  lua53_parse.h  test-maths.p8  vm-gfx.cpp  vm-maths.cpp  vm.cpp  vm.h  zepto8.cpp  zepto8.h  zepto8.lua  zepto8.vcxproj
zepto8/data/: zepto8.lua
